feat: standardize tool observations with ToolObservation type system
Implement Phase 1 of Harness Engineering improvements — all tools now
return structured ToolObservation records instead of raw strings, giving
agents richer context (status, summary, details, nextActions, error
context with retry hints) for better decision-making.

- Add observation types: ToolStatus, ErrorType, ErrorContext, ToolObservation
- Refactor HtmlParserTool, TextSummarizationTool, CoordinatorTools
- Update ToolCallAgent.act() to format structured observations with
  fallback for non-structured responses
- Add 47 new tests (all passing, 176 total suite green)