@@ -2,18 +2,18 @@ package com.ron.javainfohunter.ai.tool.impl;
 
 import com.ron.javainfohunter.ai.tool.annotation.Tool;
 import com.ron.javainfohunter.ai.tool.annotation.ToolParam;
+import com.ron.javainfohunter.ai.tool.observation.ErrorContext;
+import com.ron.javainfohunter.ai.tool.observation.ErrorType;
+import com.ron.javainfohunter.ai.tool.observation.ToolObservation;
 import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.springframework.stereotype.Component;
 
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
 /**
  * HTML 解析工具
  * <p>
- * 使用 Jsoup 解析 HTML 内容并提取文本
+ * 使用 Jsoup 解析 HTML 内容并提取文本，返回结构化 ToolObservation。
  * </p>
  *
  * @author Ron
@@ -27,10 +27,16 @@ public class HtmlParserTool {
      * 解析 HTML 并提取正文
      *
      * @param html HTML 内容
-     * @return 提取的纯文本
+     * @return 结构化观测结果
      */
     @Tool(description = "解析 HTML 内容并提取正文文本，去除广告和无关内容")
-    public String parseHtml(@ToolParam("HTML 内容") String html) {
+    public ToolObservation parseHtml(@ToolParam("HTML 内容") String html) {
+        if (html == null || html.isBlank()) {
+            return ToolObservation.failure("HTML 内容为空",
+                new ErrorContext(ErrorType.VALIDATION, "html is null or blank",
+                    "HTML 内容不能为空", false, "提供有效的 HTML 内容"));
+        }
+
         try {
             Document doc = Jsoup.parse(html);
 
@@ -49,10 +55,17 @@ public class HtmlParserTool {
             // 清理多余空白
             text = text.replaceAll("\\s+", " ").trim();
 
-            return String.format("【标题】%s\n\n【正文】%s", title, text);
+            String details = String.format("【标题】%s\n\n【正文】%s", title, text);
+
+            return ToolObservation.success(
+                "解析完成：标题 '%s'，正文 %d 字".formatted(title, text.length()),
+                details
+            );
         } catch (Exception e) {
             log.error("HTML 解析失败", e);
-            return "HTML 解析失败：" + e.getMessage();
+            return ToolObservation.failure("HTML 解析失败",
+                new ErrorContext(ErrorType.PARSE, e.getMessage(),
+                    "HTML 解析过程中发生错误", false, "检查 HTML 内容格式"));
         }
     }
 
@@ -60,10 +73,16 @@ public class HtmlParserTool {
      * 从 HTML 中提取文章元数据
      *
      * @param html HTML 内容
-     * @return 元数据 JSON
+     * @return 结构化观测结果
      */
     @Tool(description = "从 HTML 中提取文章元数据（标题、作者、发布时间等）")
-    public String extractMetadata(@ToolParam("HTML 内容") String html) {
+    public ToolObservation extractMetadata(@ToolParam("HTML 内容") String html) {
+        if (html == null || html.isBlank()) {
+            return ToolObservation.failure("HTML 内容为空",
+                new ErrorContext(ErrorType.VALIDATION, "html is null or blank",
+                    "HTML 内容不能为空", false, "提供有效的 HTML 内容"));
+        }
+
         try {
             Document doc = Jsoup.parse(html);
 
@@ -108,10 +127,15 @@ public class HtmlParserTool {
                 metadata.append("关键词：").append(keywords).append("\n");
             }
 
-            return metadata.toString();
+            return ToolObservation.success(
+                "元数据提取完成：标题 '%s'".formatted(title),
+                metadata.toString()
+            );
         } catch (Exception e) {
             log.error("元数据提取失败", e);
-            return "元数据提取失败：" + e.getMessage();
+            return ToolObservation.failure("元数据提取失败",
+                new ErrorContext(ErrorType.PARSE, e.getMessage(),
+                    "元数据提取过程中发生错误", false, "检查 HTML 内容格式"));
         }
     }
 
@@ -119,10 +143,16 @@ public class HtmlParserTool {
      * 提取 HTML 中的所有链接
      *
      * @param html HTML 内容
-     * @return 链接列表
+     * @return 结构化观测结果
      */
     @Tool(description = "提取 HTML 中的所有链接 URL")
-    public String extractLinks(@ToolParam("HTML 内容") String html) {
+    public ToolObservation extractLinks(@ToolParam("HTML 内容") String html) {
+        if (html == null || html.isBlank()) {
+            return ToolObservation.failure("HTML 内容为空",
+                new ErrorContext(ErrorType.VALIDATION, "html is null or blank",
+                    "HTML 内容不能为空", false, "提供有效的 HTML 内容"));
+        }
+
         try {
             Document doc = Jsoup.parse(html);
             var links = doc.select("a[href]");
@@ -143,10 +173,15 @@ public class HtmlParserTool {
                 result.append(String.format("... 还有 %d 个链接\n", links.size() - 20));
             }
 
-            return result.toString();
+            return ToolObservation.success(
+                "提取了 %d 个链接".formatted(Math.min(links.size(), 20)),
+                result.toString()
+            );
         } catch (Exception e) {
             log.error("链接提取失败", e);
-            return "链接提取失败：" + e.getMessage();
+            return ToolObservation.failure("链接提取失败",
+                new ErrorContext(ErrorType.PARSE, e.getMessage(),
+                    "链接提取过程中发生错误", false, "检查 HTML 内容格式"));
         }
     }
 
@@ -154,16 +189,29 @@ public class HtmlParserTool {
      * 清理文本中的 HTML 标签
      *
      * @param html HTML 内容
-     * @return 纯文本
+     * @return 结构化观测结果
      */
     @Tool(description = "移除所有 HTML 标签，保留纯文本内容")
-    public String stripHtml(@ToolParam("HTML 内容") String html) {
+    public ToolObservation stripHtml(@ToolParam("HTML 内容") String html) {
+        if (html == null || html.isBlank()) {
+            return ToolObservation.failure("HTML 内容为空",
+                new ErrorContext(ErrorType.VALIDATION, "html is null or blank",
+                    "HTML 内容不能为空", false, "提供有效的 HTML 内容"));
+        }
+
         try {
             Document doc = Jsoup.parse(html);
-            return doc.text().replaceAll("\\s+", " ").trim();
+            String text = doc.text().replaceAll("\\s+", " ").trim();
+
+            return ToolObservation.success(
+                "HTML 标签清理完成，纯文本 %d 字".formatted(text.length()),
+                text
+            );
         } catch (Exception e) {
             log.error("HTML 清理失败", e);
-            return "HTML 清理失败：" + e.getMessage();
+            return ToolObservation.failure("HTML 清理失败",
+                new ErrorContext(ErrorType.PARSE, e.getMessage(),
+                    "HTML 清理过程中发生错误", false, "检查 HTML 内容格式"));
         }
     }
 }
